<resources>
    <string name="app_name">USClassifieds</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_user_clickable_text">No account yet? Create one</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">USClassifieds</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--Create User Page Specific Labels-->
    <string name="prompt_name">Full Name</string>
    <string name="prompt_phone_number">Phone Number (Optional)</string>
    <string name="prompt_profile_description">Profile Description (Optional)</string>
    <string name="create_account_button">Create Account</string>
    <string name="sign_in_clickable_text">Already have an Account? Sign in</string>

    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>
    <string name="title_friends">Friends</string>
    <string name="title_friend_results">Friend Results</string>
    <string name="title_create_listing">Create Listing</string>
    <string name="title_view_listing">View Listing</string>
    <string name="title_advanced_search">Advanced Search</string>
    <string name="title_results">Results</string>
    <string name="title_map">Map</string>
    <string name="title_contact">Contact</string>

    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="search_hint">Search</string>
    <string name="map_search_hint">Search by title or category</string>

    <string-array name="advanced_search_options">
        <item>Search by Cost</item>
        <item>Search by Distance</item>
        <item>Search by User</item>
        <item>See only Friends Items</item>
    </string-array>

    <string-array name="cost_options">
        <item>Low to High</item>
        <item>High to Low</item>
    </string-array>
</resources>
